[project]
name = "kaaz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
